<resources>
    <string name="app_name">Team 1 TCSS 450</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>
    <string name="action_link">Enter Chat</string>

    <!--Settings -->
    <string name="title_themes">Themes</string>
    <string name="button_standard">Standard</string>
    <string name="button_purple">Purple Theme</string>
    <string name="button_teal">Teal Theme</string>

    <string name="title_profile">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_Weather">Weather</string>
    <string name="title_Contacts">Contacts</string>
    <string name="title_messages">Messages</string>

    <string name="base_url_service">https://team1-tcss450-labs-service.herokuapp.com/</string>
    <string name="base_url_auth">https://team1-tcss450-labs-auth.herokuapp.com/</string>
    <string name="keys_json_contact_name" />
    <string name="keys_json_contact_id" />
    <string name="keys_json_contact_response" />
    <string name="keys_json_contact_email" />

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

</resources>