<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_homeFragment">

    <fragment
        android:id="@+id/navigation_messagesFragment"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" >
        <argument
            android:name="messagesFragment"
            app:argType="edu.uw.tcss450.ckald.team1tcss450.ui.messages.MessagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_weatherFragment"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.weather.WeatherFragment"
        android:label="@string/title_Weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_homeFragment"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_contactsFragment"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.contacts.ContactsFragment"
        android:label="@string/title_Contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_themes"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.settings.ThemesFragment"
        android:label="@string/title_themes"
        tools:layout="@layout/fragment_themes"
        />
    <fragment
        android:id="@+id/navigation_chatsFragment"
        android:name="edu.uw.tcss450.ckald.team1tcss450.ui.messages.ChatsFragment"
        android:label="Chats" >
        <action
            android:id="@+id/action_navigation_chatsFragment_to_navigation_messagesFragment"
            app:destination="@id/navigation_messagesFragment" />
    </fragment>
</navigation>